tests/fail_cases/missing_data.stderr
error: Missing condition in #{if .. }
 --> $DIR/missing_data.rs:6:23
  |
6 |     let _ = mquote!(#{if} 123 #{endif});
  |                       ^^

error: Missing var and expression in #{for var in expression}
 --> $DIR/missing_data.rs:8:23
  |
8 |     let _ = mquote!(#{for} repeative #{endfor});
  |                       ^^^

error: Missing matching expression in #{match .. }
 --> $DIR/missing_data.rs:9:23
  |
9 |     let _ = mquote!(#{match}#{of Some(x)} #{x} #{endmatch});
  |                       ^^^^^

error: Missing pattern in #{of .. }
  --> $DIR/missing_data.rs:10:42
   |
10 |     let _ = mquote!(#{match Some("1")} #{of} hi #{endmatch});
   |                                          ^^
